c3p0-0.9.5-pre8
	-- Resolved a Serialization problem introduced in c3p0-0.9.5-pre7 (Broke serializability of DefaultConnectionTester
	   and therefore typical instances of WrapperConnectionPoolDataSource.) Many thanks to Petar Tachiev for calling attention to this issue.
	-- [in mchange-commons-java] Fixed a latent issue where decoding of JNDI References would fail if the Object factory
	   was not loaded by the System ClassLoader. (This issue was revealed when Serialization failures provoked fallback
	   to a Reference Serialization strategy.) Many thanks to Petar Tachiev for calling attention to this issue.
c3p0-0.9.5-pre7
	-- Cleaned up (and exposed a configuration property to tweak) selection of Connection tests when
	   no query is provided. Do we use Connection.isValid(...), the traditional DatabaseMetaData-based test,
	   something else? Now, by default we try isValid(...) but we back-off to the traditional test on error.
	   But this behavior is configurable via the property 'com.mchange.v2.c3p0.impl.DefaultConnectionTester.querylessTestRunner'
	   (which is documented with 'Other Properties').
	-- Added config parameter 'forceUseNamedDriverClass', which ensures that an instance of the class named in
	   'driverClass' is used as the JDBC driver, rather than simply preloading the named class and then
	   relying upon DriverManager to determine which driver to use. Thanks to Martin Coene and meinc on SourceForge
	   for calling attention to this issue.
	-- We now support the parentLogger property of DataSources (rather than just throwing an SQLFeatureNotSupportedException).
	   This should resolve the issue identified by Maarten Coene (thanks!), where JMX clients repeatedly see
	   Exceptions as they try to read the parentLogger property.
	-- [in mchange commons java] MLog levels WARNING and SEVERE were misordered due to bad copy/paste of
	   the integer value of levels. Many thanks to Martin Coene for discovering and tracking down the problem.