@@ -309,13 +309,19 @@ public final class DriverManagerDataSource extends DriverManagerDataSourceBase i
     }
 
     // JDBC4 Wrapper stuff
+    private boolean isWrapperForThis(Class<?> iface)
+    { return iface.isAssignableFrom( this.getClass() ); }
+
     public boolean isWrapperFor(Class<?> iface) throws SQLException
     {
-	return false;
+	return isWrapperForThis( iface );
     }
 
     public <T> T unwrap(Class<T> iface) throws SQLException
     {
-	throw new SQLException(this + " is not a Wrapper for " + iface.getName());
+	if ( this.isWrapperForThis( iface ) )
+	    return (T) this;
+	else
+	    throw new SQLException(this + " is not a wrapper for or implementation of " + iface.getName());
     }
 }
